--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "alana-portfolio",
+  "name": "alanas-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "start": "node server.cjs"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@readyplayerme/visage": "^3.5.2",
     "bootstrap": "^5.2.3",
+    "emailjs": "^4.0.2",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.10.0"
+    "react-router-bootstrap": "^0.26.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "gh-pages": "^5.0.0",
-    "vite": "^4.2.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "vite": "^4.3.2"
   }
 }
