--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@mui/base": "^5.0.0-beta.34",
     "@readyplayerme/visage": "^3.5.2",
     "@vercel/analytics": "^1.1.1",
     "bootstrap": "^5.2.3",
@@ -24,6 +25,6 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "gh-pages": "^5.0.0",
-    "vite": "^4.4.9"
+    "vite": ">=5.0.12"
   }
 }
