--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@readyplayerme/visage": "^3.5.2",
     "@vercel/analytics": "^1.1.1",
     "bootstrap": "^5.2.3",
-    "emailjs": "^4.0.3",
-    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -27,10 +25,6 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "gh-pages": "^5.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "5.0.12"
+    "vite": "^4.4.9"
   }
 }
