--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.34",
+    "@mui/material": "^5.15.7",
     "@readyplayerme/visage": "^3.5.2",
     "@vercel/analytics": "^1.1.1",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
