Avatar edited but not functional

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.34",
     "@mui/material": "^5.15.7",
-    "@readyplayerme/visage": "^3.5.2",
+    "@readyplayerme/react-avatar-creator": "^0.5.0",
+    "@readyplayerme/visage": "^3.10.0",
     "@vercel/analytics": "^1.1.1",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
