--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "react-unity-webgl": "^9.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
