--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.34",
     "@mui/material": "^5.15.7",
+    "@react-pdf/renderer": "^3.4.4",
     "@readyplayerme/react-avatar-creator": "^0.5.0",
     "@readyplayerme/visage": "^3.10.0",
     "@vercel/analytics": "^1.1.1",
