--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "@readyplayerme/visage": "^3.10.0",
     "@vercel/analytics": "^1.1.1",
     "bootstrap": "^5.3.2",
+    "highlight.js": "^11.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-code-blocks": "^0.1.6",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.22.0",
-    "react-unity-webgl": "^9.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "react-unity-webgl": "^9.5.0",
+    "rehype-highlight": "^7.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
